--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "1.4.7"
   },
   "devDependencies": {
+    "codecov.io": "0.0.1",
     "traverse": "0.6.6",
     "deep-equal": "0.2.1",
     "difflet": "0.2.6",
