--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mocha": "1.20.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "make test-codecov.io"
   },
   "repository": {
     "type": "git",
