--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "codecov.io": "0.0.1",
+    "mocha-lcov-reporter": "0.0.1",
+    "istanbul": "0.3.2",
     "traverse": "0.6.6",
     "deep-equal": "0.2.1",
     "difflet": "0.2.6",
